# dotfiles

./: .gitignore  Cargo.toml  README.md  flake.nix  rust-toolchain.toml
.githooks/: pre-commit
config/: defaults.nix  starship.toml
config/alacritty/: alacritty.toml
config/desktop/: Xclients  dbus-session.conf  fcitx5.sh  kdeglobals  start-xfce-session.sh  xfce4-keyboard-shortcuts.xml
config/fcitx5/: autostart.desktop  org.fcitx.Fcitx5.desktop  profile  start-fcitx5.sh
config/nix/: nix.conf
config/nvim/: init.lua  nvim-pack-lock.json
config/vnc/: start-vnc-session.sh  x11vnc.desktop
config/xrdp/: pam.debian  pam.fedora  sesman.debian.ini  sesman.fedora.ini  session-env.sh  startwm.sh  xfce4-panel.wsl.xml  xorg.conf  xrdp-sesman.service  xrdp.ini  xrdp.service
distrobox/: ros-jazzy.ini
home/: home.nix
home/modules/: base.nix  browser.nix  desktop.nix  editor.nix  options.nix  packages.nix  shell.nix  terminal.nix  vnc.nix
nixos/: disk2-desktop.nix  disko-install.nix  native-desktop.nix  native-filesystems.nix  wsl-desktop.nix
nixos/modules/: base.nix  xrdp-xfce.nix
pkgs/: fcitx5-hazkey.nix  hazkey.nix
scripts/: bootstrap-host-ubuntu.sh  bootstrap.sh  create-ros-jazzy-box.sh  install-nixos-disk2-from-wsl.sh  install-nvm.sh  lib.sh  setup-ros-jazzy-box.sh  switch.sh  sync-nvim-pack.sh  update-pack-plugins.sh  update-sources.sh
src/: app.rs  backup.rs  cli.rs  context.rs  home_manager.rs  main.rs
src/app/: container.rs  container_setup.rs  hazkey.rs  healthcheck.rs  hooks.rs  host.rs  nvim.rs  remote.rs  (+2 more)
zsh/: .zprofile  .zshenv  .zshrc
(+31 files in other folders)
