[package]
name = "xtask"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tempfile = "3.27.0"
time = { version = "0.3.53", features = ["formatting", "macros", "parsing", "serde"] }
walkdir = "2.5.0"
xshell = "0.2.7"
